Update ReviewSpecificationImpl